src/objects/Template_Page_Content__c.object
<CustomObject><fields>
        <fullName>Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Width</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Content_Container__c.Type__c</field>
                <operation>equals</operation>
                <value>Width</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Content_Container__c</referenceTo>
        <relationshipName>Page_Contents1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Page__c</fullName>
        <label>_Page</label>
        <referenceTo>Template_Page__c</referenceTo>
        <relationshipName>Page_Contents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Row__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Row</label>
        <referenceTo>Template_Row__c</referenceTo>
        <relationshipName>Template_Containers</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Sort_Order__c</fullName>
        <label>Order in Row</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Row Elements of Page Templates</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Element</label><nameField>
        <label>Element</label>
        <type>Text</type>
    </nameField><pluralLabel>Elements</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith><recordTypes>
        <fullName>API</fullName>
        <active>true</active>
        <label>API</label>
    </recordTypes><recordTypes>
        <fullName>Call_to_Action</fullName>
        <active>true</active>
        <description>Call To Action</description>
        <label>Call to Action</label>
    </recordTypes><recordTypes>
        <fullName>Carousel</fullName>
        <active>true</active>
        <label>Carousel</label>
    </recordTypes><recordTypes>
        <fullName>Generic_Content</fullName>
        <active>true</active>
        <label>Generic Content</label>
    </recordTypes><recordTypes>
        <fullName>Video</fullName>
        <active>true</active>
        <label>Video</label>
    </recordTypes></CustomObject>